@@ -1,5 +1,6 @@
 package org.example.jobsearchplatform.service;
 
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.example.jobsearchplatform.dto.EmployerCreateRequest;
 import org.example.jobsearchplatform.dto.EmployerResponse;
@@ -10,13 +11,15 @@ import org.example.jobsearchplatform.repository.CompanyRepository;
 import org.example.jobsearchplatform.service.mapper.EmployerMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class EmployerService {
+
+    private static final String EMPLOYER_NOT_FOUND_ID = "Employer not found with id: ";
 
     private final EmployerRepository employerRepository;
     private final CompanyRepository companyRepository;
@@ -24,7 +27,7 @@ public class EmployerService {
 
     public EmployerResponse createEmployer(EmployerCreateRequest request) {
         if (employerRepository.existsByEmail(request.getEmail())) {
-            throw new RuntimeException("Employer with email " + request.getEmail() + " already exists");
+            throw new IllegalArgumentException("Employer with email " + request.getEmail() + " already exists");
         }
 
         Company company = companyRepository.findById(request.getCompanyId())
@@ -37,7 +40,7 @@ public class EmployerService {
 
     public EmployerResponse findById(Long id) {
         Employer employer = employerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Employer not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException(EMPLOYER_NOT_FOUND_ID + id));
         return employerMapper.toResponse(employer);
     }
 
@@ -50,18 +53,18 @@ public class EmployerService {
     public List<EmployerResponse> findAll() {
         return employerRepository.findAll().stream()
                 .map(employerMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<EmployerResponse> findByCompany(Long companyId) {
         return employerRepository.findByCompanyId(companyId).stream()
                 .map(employerMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public EmployerResponse updateEmployer(Long id, EmployerCreateRequest request) {
         Employer employer = employerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Employer not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException(EMPLOYER_NOT_FOUND_ID + id));
 
         Company company = companyRepository.findById(request.getCompanyId())
                 .orElseThrow(() -> new RuntimeException("Company not found with id: " + request.getCompanyId()));
@@ -77,14 +80,14 @@ public class EmployerService {
 
     public void blockEmployer(Long id) {
         Employer employer = employerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Employer not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException(EMPLOYER_NOT_FOUND_ID + id));
         employer.setStatus("BLOCKED");
         employerRepository.save(employer);
     }
 
     public void deleteEmployer(Long id) {
         Employer employer = employerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Employer not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException(EMPLOYER_NOT_FOUND_ID + id));
         employer.setStatus("DELETED");
         employerRepository.save(employer);
     }
